# ryeNote

./: .gitignore  LICENSE  README.md
.obsidian/: app.json  appearance.json  workspace.json
my-project/: .gitignore  README.md  pyproject.toml
my-project/config/: config.toml
my-project/src/my_project/: helloRye.py
