[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "LeroyK", email = "785632486@qq.com" }
]
# 依赖
dependencies = [
    "flask>=2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

# 初始化脚本，被调用时，才会执行。
# rye run my-hello-script
# [project.scripts]
# my-hello-script = ''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
# 是否由rye管理这个包
managed = true
# 开发时，使用的包
dev-dependencies = [
    "black>=23.9.1",
]
# 排除的包
# excluded-dependencies = ["cffi"]

# 包中的pypi源
# [[tool.rye.sources]]
# name = "default"
# url = "http://pypi.org/simple/"

# 包本身的脚本，由rye run驱动，类似npm run
# [tool.rye.scripts]
# 三者是等价的
# devserver = "flask run --app ./hello.py --debug"
# devserver-alt = ["flask", "run", "--app", "./hello.py", "--debug"]

# cmd命令：调用rye自设的虚拟环境
# devserver-explicit = { cmd = "flask run --app ./hello.py --debug"}
# 设置环境变量
# devserver = { cmd = "flask run --debug", env = { FLASK_APP = "./hello.py" } }

# 链式调用命令
# lint = { chain = ["lint:black", "lint:flake8" ] }
# "lint:black" = "black --check src"
# "lint:flake8" = "flake8 src"

# 调用模块or函数
# serve = { call = "http.server" }
# help = { call = "builtins:help" }
# hello-world = { call = "builtins:print('Hello World!')" }


[tool.hatch.metadata]
allow-direct-references = true

# 工作区
# [tool.rye.workspace]
# members = ["myLib"]

# 轮子依赖
# [tool.hatch.build.targets.sdist]
# include = ["src/my_package", "tests"]


# 依赖项
# [tool.rye.dev-dependencies]